# realtime-fs-sync

./: Cargo.toml
locales/: en-US.yml  ja-JP.yml
src/: app.rs  lib.rs  main.rs  sync.rs  watch.rs
