[package]
name = "realtime-fs-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
eframe = "0.22.0"
egui_logger = "0.3.0"
env_logger = "0.10.0"
ignore = "0.4.20"
log = "0.4.17"
notify = "6.0.0"
once_cell = "1.17.1"
rust-i18n = "1.2.1"
serde = { version = "1.0.163", features = ["derive"] }
sha256 = "1.1.3"
similar = { version = "2.2.1", features = ["unicode"] }
sys-locale = "0.3.0"
yazi = "0.1.6"
